--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lodash": "^4.17.4",
     "moment": "^2.19.2",
     "react": "^16.1.1",
+    "react-color": "2.13.8",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.1.1",
     "react-router-dom": "^4.2.2",
