--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dutils",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://de314.github.io/dutils",
   "dependencies": {
     "classnames": "^2.2.5",
     "json-lint": "0.1.0",
@@ -21,6 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "deploy": "npm run build && gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "1.0.0"
   }
 }
