--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "react-color": "2.13.8",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.1.1",
+    "react-redux": "5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "recompose": "^0.26.0",
+    "redux": "3.7.2",
+    "redux-localstorage": "0.4.1",
     "uuid": "^3.1.0"
   },
   "scripts": {
