--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.1.1",
     "react-redux": "5.0.6",
+    "react-redux-toastr": "7.1.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "recompose": "^0.26.0",
