--- a/package.json
+++ b/package.json
@@ -6,17 +6,17 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "json-lint": "0.1.0",
-    "lodash": "^4.17.4",
-    "moment": "^2.19.2",
+    "lodash": "^4.17.10",
+    "moment": "^2.22.2",
     "react": "^16.1.1",
     "react-ace": "5.5.0",
-    "react-color": "2.13.8",
+    "react-color": "^2.14.1",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.1.1",
     "react-redux": "5.0.6",
     "react-redux-toastr": "7.1.6",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17",
+    "react-scripts": "^1.1.4",
     "recompose": "^0.26.0",
     "redux": "3.7.2",
     "redux-localstorage": "0.4.1",
@@ -29,6 +29,6 @@
     "deploy": "npm run build && gh-pages -d build"
   },
   "devDependencies": {
-    "gh-pages": "1.0.0"
+    "gh-pages": "^1.2.0"
   }
 }
